	ImageMagick to observe image depth while writing pixel colors.
	This patch is not applied to the 1.0 branch because it represents
	an output format change which could break a dependent application.
	(IsTXT): Recognize files written by the TXT coder.
	(ReadTXTImage): Reject files written by the TXT coder until support
	for reading these files is implemented.

2003-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Don't add -lfpx to LIBS while configuring
	because the C compiler may fail to link with it in later
	tests.

2003-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: RotateImage is documented to take
	'degrees' argument, not 'degree'.  SwirlImage is documented to
	take 'degrees' argument, not 'degree'.  SolarizeImage is
	documented to take a 'threshold' argument, not 'factor'.  Wave is
	documented to take 'amplitude' and 'wavelength' arguments.  Don't
	transform colorspace to RGB when retrieving 'pixel' color value.
	Release memory acquired to store 'length' pointer.  Picked up
	memory leak fix related to 'SV **reference_vector' variable from
	John Cristy's ImageMagick.	
	* configure: Incorporate patch to handle inline better.
	* magick/utility.c (GetToken): Adjust code to avoid "end-of-loop
	code not reached" warning.
	* magick/log.c (GetLogBlob): Eliminate warning regarding
	unreached code.	
	* magick/command.c (AnimateImageCommand): Eliminate warning regarding
	unreached code.	
	(ConvertImageCommand): Eliminate warning regarding
	unreached code.	
	(ImportImageCommand): Eliminate warning regarding
	unreached code.	
	* magick/type.c (GetTypeBlob): Eliminate warning regarding
	unreached code.	
	* magick/blob.c (GetConfigureBlob): Eliminate warning regarding
	unreached code.
	* coders/meta.c (super_fgets): Eliminated warnings regarding
	comparison and return of incompatible pointer types.
	(super_fgets_w): Eliminated warnings regarding
	comparison and return of incompatible pointer types.